--- a/src/App.css
+++ b/src/App.css
@@ -1,41 +1,11 @@
 @import 'antd/dist/antd.css';
 
 
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#resume-list {
+  height: 100%;
+  overflow-x: hide;
+  overflow-y: auto;
+  
+  padding: 0 16px;
+  border: 1px solid rgba(140, 140, 140, 0.35);
 }
