--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,15 @@
   height: 100%;
   overflow-x: hide;
   overflow-y: auto;
+  margin: 2%;
+  padding:  16px;
   
-  padding: 0 16px;
-  border: 1px solid rgba(140, 140, 140, 0.35);
+ 
 }
+
+.resume-container{
+  display: flex;
+  flex-direction: column;
+ 
+}
+
