--- a/src/components/css/Navbar.css
+++ b/src/components/css/Navbar.css
@@ -1,5 +1,25 @@
 #navbar{
     display: flex;
-    justify-content: space-around;
-    margin-top: 5vh;
+    justify-content: space-between;
+    height: 20%;
+    margin-bottom: 10vh;
+    background-image: linear-gradient(rgb(250, 250, 250), rgb(173, 173, 227));
+    opacity: 95%;
 }
+
+
+  
+  .guide{
+    display:flex;
+    flex-direction: row;
+    margin: 2vw;
+    gap: .8rem;
+  }
+
+  .logo{
+    margin:1rem;
+    color: white;
+    font-size: 20px;
+    font-weight: bolder;
+    
+  }
