after you login it takes you to the next page automatically and will stay logged in on refresh

--- a/src/components/RateResumesComponents/RateResumeCss.css
+++ b/src/components/RateResumesComponents/RateResumeCss.css
@@ -1,8 +1,19 @@
-.slick-dots li button {
+/* .slick-dots li button {
     width: 6px;
-    height: 6px;
+    height: 900px;
     border-radius: 100%;
-    background-color: black;
+    background-color: rgb(248, 1, 1);
+  } */
+
+  
+  #levelbuttons-container{
+  margin: 10px;
+  
   }
+.levelbutton{
+  margin: 5px;
+  
+}
+  
 
   
