--- a/src/App.css
+++ b/src/App.css
@@ -11,9 +11,27 @@
  
 }
 
+#upload{
+ margin: 15px;
+width:  400px;
+ right: 3px;
+}
+
 .resume-container{
   display: flex;
   flex-direction: column;
- 
+}
+.resume--post-container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  background-color: thistle;
+  height: 800px;
 }
 
+#ScoreInput{
+  width: 20%;
+  align-items: center;
+  margin-left:30% ;
+}
