--- a/src/components/css/footer.css
+++ b/src/components/css/footer.css
@@ -3,12 +3,12 @@
 #footer{
 position: static;
  bottom: 0;
- height: 25vh;
- background-color:salmon;
+ height: 20vh;
+ background-color:rgb(251, 251, 217);
  width: 100%;
- margin-top: 3vh;
+ margin-top: 0;
  text-align: center;
- min-height: 17vh
-
+ max-height: 25vh;
+ overflow: hidden;
 }
 
