--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 @import 'antd/dist/antd.css';
 
 
+
 #resume-list {
   height: 100%;
   overflow-x: hide;
@@ -32,6 +33,7 @@ width:  400px;
 
 #ScoreInput{
   width: 20%;
-  align-items: center;
-  margin-left:30% ;
+  margin-left:30%;
+  box-shadow: 90px;
+
 }
