--- a/src/components/RateResumesComponents/RateResumeCss.css
+++ b/src/components/RateResumesComponents/RateResumeCss.css
@@ -4,16 +4,25 @@
     border-radius: 100%;
     background-color: rgb(248, 1, 1);
   } */
-
+  .ant-carousel .slick-dots li button {
+    background: blue;
   
-  #levelbuttons-container{
-  margin: 10px;
-  
-  }
-.levelbutton{
-  margin: 5px;
-  
+    opacity: 1;
+    height: 1000px;
 }
   
+.carousel-container{
+  border: 90px solid black;
+  overflow: hidden;
+  height: 1200px;
+  justify-content: center;
+  align-items: center; 
+  width: 100%;
+}
 
   
+
+.resume-container{
+height: 600px;
+
+}
