--- a/src/components/css/About.css
+++ b/src/components/css/About.css
@@ -1,10 +1,28 @@
 #logo{
    border: 10px;
    border-color: black;
+   height: 300px;
+   display: flex;
+   margin: 100px;
+   padding-top: 100px;
 }
 
 #About{
   width: 100%;
   background-color: rgb(245, 220, 243);
   display: flex; 
+  
+}
+
+#line{
+  border-left: 5px solid black;
+  height: 500px;
+}
+
+#ab-right{
+  display: flex;
+  justify-content: center;
+  padding-left: 900px;
+  
+  
 }
