--- a/src/components/css/footer.css
+++ b/src/components/css/footer.css
@@ -2,10 +2,10 @@
 
 #footer{
 text-align: center;
-margin-top: 50px;
 padding-bottom: 10px;
-height: auto;
+height: 175px;
  background-color:rgb(251, 251, 217);
  width: 100%;
+ overflow: hidden;
 }
 
