--- a/src/components/css/About.css
+++ b/src/components/css/About.css
@@ -9,20 +9,45 @@
 
 #About{
   width: 100%;
-  background-color: rgb(245, 220, 243);
+  background-color: #f1faee;
   display: flex; 
+  border: 5px solid black ;
+ 
   
 }
 
 #line{
   border-left: 5px solid black;
-  height: 500px;
+  height: 100%;
 }
 
 #ab-right{
   display: flex;
   justify-content: center;
-  padding-left: 900px;
+  border: 15px solid black;
+ 
+}
+
+#About-Header{
+    display: flex;
+    justify-content: space-between;
+    height: 20%;
+    background-color:  #a8dadc;
+    padding-top: .5em;
+    padding-bottom: .5em;
+    color: rgba(0, 0, 0, 0.85);
+    font-weight: 500;
+  
+}
+
+#hero{
+  display: flex;
+  text-align: center;
+  flex-direction: column;
+  justify-content: center;
+  
+  width: 80vw;
   
   
+
 }
