--- a/src/components/css/Navbar.css
+++ b/src/components/css/Navbar.css
@@ -2,8 +2,7 @@
     display: flex;
     justify-content: space-between;
     height: 20%;
-    
-    background-image: linear-gradient(rgb(250, 250, 250), rgb(173, 173, 227));
+    background-color: #a8dadc;
     opacity: 95%;
 }
 
