--- a/src/components/css/searchstyles.css
+++ b/src/components/css/searchstyles.css
@@ -5,7 +5,7 @@
     align-items: center;
     justify-content: center;
     padding: 140px;
-    background-color: white;
+    background-color: #f1faee;
 }
 
 .searchTextContainer {
@@ -80,12 +80,9 @@ text-align: center;
 
 #searchform{
 box-sizing: border-box;
-width: 50%;
-height: 50%;
-
-
+width: 2000px;
+height: 500px;
 background: #F2E7F4;
-
 box-shadow: 5px 5px 3px rgba(0, 0, 0, 0.2);
 border-radius: 10px;
 }
