--- a/src/components/css/About.css
+++ b/src/components/css/About.css
@@ -1,10 +1,12 @@
 #logo{
-   border: 10px;
+   border: 1px;
    border-color: black;
-   height: 300px;
+   height: 400px;
    display: flex;
-   margin: 100px;
+   margin-top: 100px;
    padding-top: 100px;
+   padding-right: 50px;
+  
 }
 
 #About{
@@ -12,19 +14,19 @@
   background-color: #f1faee;
   display: flex; 
   border: 5px solid black ;
- 
+  overflow: hidden;
   
 }
 
 #line{
   border-left: 5px solid black;
-  height: 100%;
+  height: 79.5%;
 }
 
 #ab-right{
   display: flex;
   justify-content: center;
-  border: 15px solid black;
+ 
  
 }
 
@@ -45,9 +47,6 @@
   text-align: center;
   flex-direction: column;
   justify-content: center;
-  
   width: 80vw;
-  
-  
-
+  height: 100vh;
 }
